--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "server=localhost; database=crr_dev3; user id=sa; password=MyComplexPassword!234"
   },
   "Logging": {
     "LogLevel": {
